--- a/lib/l10n/app_es_GT.arb
+++ b/lib/l10n/app_es_GT.arb
@@ -1,74 +1,75 @@
 {
-"assetDied": "{asset} ha muerto!",
-"assets": "Ingresos de los activos",
-"assetsDied": "¡Los animales han muerto!",
-"borrow": "sacar un préstamo",
-"borrowAt": "Tomar un préstamo al {interestRate}% de interés total",
-"cash": "pagar en efectivo",
-"cashAlert": "¡No tiene suficiente efectivo!",
-"cashGoal": "Meta de efectivo",
-"cashGoalReach": "Meta de efectivo: alcanzar {cashAmount}",
-"chicken": "pollo",
-"clearCache": "limpiar cache",
-"confirm": "de acuerdo",
-"congratulations": "Felicitaciónes",
-"continueButton": "continuar",
-"pig": "vaca",
-"currentCash": "Efectivo actual: {cashAmount}",
-"dontBuy": "No comprar",
-"enterName": "Por favor, introduzca su nombre y apellido.",
-"error": "error",
-"expenses": "gastos",
-"gameFinished": "¡Felicitaciones, terminaste el juego con éxito!",
-"goat": "cabra",
-"hintFirstName": "nombre de pila",
-"hintLastName": "apellido",
-"howToPlay": "cómo jugar",
-"income": "ingreso",
-"incomePerYear": "Ingresos: {cashAmount} / año",
-"instructionText1": "1. Para comenzar el juego, haga clic en el botón “Siguiente“ en la esquina superior derecha.",
-"instructionText2": "2. Puede comprar un animal con efectivo, sacar un préstamo, o decidir no comprar el activo.",
-"instructionText3": "3. Cada redondo animales varían en su precio, ingresos, y esperanza de vida.",
-"instructionText4": "4. Es posible que encuentre útiles los cálculos debajo de la tarjeta de animales.",
-"instructionText5": "5. Debe alcanzar una cierta cantidad en efectivo para llegar al siguiente nivel.",
-"instructionText6": "6. Puedes encontrar estas instrucciones del juego en el menú Configuración.",
-"interestCash": "• La tasa de interés en efectivo es {interestRate}% / año",
-"investmentOptions": "Opciones de inversión",
-"language": "Español - GTQ",
-"languagesTitle": "Idiomas",
-"level": "Nivel {level} / {levelTotal}",
-"lifeExpectancy": "Esperanza de vida: {yearsNum} años",
-"lifeRisk": "Riesgo: 1 de {number} no sobrevivirá",
-"loan": "{count, plural, =1{préstamo} other{préstamos}}",
-"lostGame": "Desafortunadamente, te quedaste sin efectivo. Puedes reiniciar este nivel o comenzar un nuevo juego.",
-"next": "siguir",
-"nextLevel": "siguiente nivel",
-"notMe": "ese no soy yo",
-"overview": "descripción general",
-"payCash": "pagar en efectivo",
-"personal": "personal",
-"price": "Precio: {cashAmount}",
-"reachedNextLevel": "¡Has alcanzado el siguiente nivel!",
-"restart": "Reanudar",
-"restartGame": "reinicia el juego",
-"restartLevel": "volver a empesar el nivel",
-"sameUser": "Si eres {firstName}, simplemente comienza el juego.",
-"settings": "ajustes",
-"signInDifferentPerson": "Si ese no eres tú, por favor inicie sesión como una persona diferente.",
-"startAtLevel": "Comience en el nivel {level}",
-"tip": "consejo",
-"titleSignIn": "Bienvenido al juego de Finsim",
-"warning": "advertencia",
-"welcomeBack": "Bienvenido de nuevo, {firstName} {lastName}!",
-"welcomeText": "Queridos participantes, is Juego está destinado a imitar las inversiones financieras. Solo se utilizará con el fin de enseñar. Este juego no afectará la relación con su banco. \n \n Ingrese su información de contacto a continuación.",
-"selectLanguage": "Seleccione el idioma:",
-"hintUID": "p.ej. TEST001",
-"confirmNameTitle": "Confirma tu nombre",
-"confirmName": "¿Eres {firstName} {lastName}?",
-"noButton": "No",
-"yesButton": "Sí",
-"codeNotFound": "Código no encontrado",
-"noCodeButton": "Sin código",
-"signInName": "Inicie sesión con su nombre y apellido: \n",
-"backButton": "atrás"
+  "assetDied": "{asset} ha muerto!",
+  "assets": "Ingresos de los activos",
+  "assetsDied": "¡Los animales han muerto!",
+  "borrow": "sacar un préstamo",
+  "borrowAt": "Tomar un préstamo al {interestRate}% de interés total",
+  "cash": "pagar en efectivo",
+  "cashAlert": "¡No tiene suficiente efectivo!",
+  "cashGoal": "Meta de efectivo",
+  "cashGoalReach": "Meta de efectivo: alcanzar {cashAmount}",
+  "chicken": "pollo",
+  "clearCache": "limpiar cache",
+  "confirm": "de acuerdo",
+  "congratulations": "Felicitaciónes",
+  "continueButton": "continuar",
+  "pig": "vaca",
+  "currentCash": "Efectivo actual: {cashAmount}",
+  "dontBuy": "No comprar",
+  "enterName": "Por favor, introduzca su nombre y apellido.",
+  "error": "error",
+  "expenses": "gastos",
+  "gameFinished": "¡Felicitaciones, terminaste el juego con éxito!",
+  "goat": "cabra",
+  "hintFirstName": "nombre de pila",
+  "hintLastName": "apellido",
+  "howToPlay": "cómo jugar",
+  "income": "ingreso",
+  "incomePerYear": "Ingresos: {cashAmount} / año",
+  "instructionText1": "1. Para comenzar el juego, haga clic en el botón “Siguiente“ en la esquina superior derecha.",
+  "instructionText2": "2. Puede comprar un animal con efectivo, sacar un préstamo, o decidir no comprar el activo.",
+  "instructionText3": "3. Cada redondo animales varían en su precio, ingresos, y esperanza de vida.",
+  "instructionText4": "4. Es posible que encuentre útiles los cálculos debajo de la tarjeta de animales.",
+  "instructionText5": "5. Debe alcanzar una cierta cantidad en efectivo para llegar al siguiente nivel.",
+  "instructionText6": "6. Puedes encontrar estas instrucciones del juego en el menú Configuración.",
+  "interestCash": "• La tasa de interés en efectivo es {interestRate}% / año",
+  "investmentOptions": "Opciones de inversión",
+  "language": "Español - GTQ",
+  "languagesTitle": "Idiomas",
+  "level": "Nivel {level} / {levelTotal}",
+  "lifeExpectancy": "Esperanza de vida: {yearsNum} años",
+  "lifeRisk": "Riesgo: 1 de {number} no sobrevivirá",
+  "loan": "{count, plural, =1{préstamo} other{préstamos}}",
+  "lostGame": "Desafortunadamente, te quedaste sin efectivo. Puedes reiniciar este nivel o comenzar un nuevo juego.",
+  "next": "siguir",
+  "nextLevel": "siguiente nivel",
+  "notMe": "ese no soy yo",
+  "overview": "descripción general",
+  "payCash": "pagar en efectivo",
+  "personal": "personal",
+  "price": "Precio: {cashAmount}",
+  "reachedNextLevel": "¡Has alcanzado el siguiente nivel!",
+  "restart": "Reanudar",
+  "restartGame": "reinicia el juego",
+  "restartLevel": "volver a empesar el nivel",
+  "sameUser": "Si eres {firstName}, simplemente comienza el juego.",
+  "settings": "ajustes",
+  "signInDifferentPerson": "Si ese no eres tú, por favor inicie sesión como una persona diferente.",
+  "startAtLevel": "Comience en el nivel {level}",
+  "tip": "consejo",
+  "titleSignIn": "Bienvenido al juego de Finsim",
+  "warning": "advertencia",
+  "welcomeBack": "Bienvenido de nuevo, {firstName} {lastName}!",
+  "welcomeText": "Queridos participantes, is Juego está destinado a imitar las inversiones financieras. Solo se utilizará con el fin de enseñar. Este juego no afectará la relación con su banco. \n \n Ingrese su información de contacto a continuación.",
+  "selectLanguage": "Seleccione el idioma:",
+  "hintUID": "p.ej. TEST001",
+  "confirmNameTitle": "Confirma tu nombre",
+  "confirmName": "¿Eres {firstName} {lastName}?",
+  "noButton": "No",
+  "yesButton": "Sí",
+  "codeNotFound": "Código no encontrado",
+  "noCodeButton": "Sin código",
+  "signInName": "Inicie sesión con su nombre y apellido: \n",
+  "backButton": "atrás",
+  "@@locale": "es_GT"
 }
