update Runyankole translations

--- a/lib/l10n/app_nyn.arb
+++ b/lib/l10n/app_nyn.arb
@@ -1,46 +1,76 @@
 {
+  "@@locale": "nyn",
+  "asset Died": "{asset} yafa, Eky’obugaiga bikahwaho",
+  "assets": "ebintu byawe by'okugura, Ebyobugaiga",
+  "assets Died": "Ebintu byawe byafire, Eby’obugaiga bikahwaho",
+  "borrow": "okwemereza, Okweguza esente",
+  "borrow At": "okwemereza ku okweguza (ahamagoba) {interestRate}% buri mwaka omwaka ninga emyaka ebiri kumyaka ebiri, wemereze ku {interestRate}% omwaka",
+  "cash": "Esente ezaburiho, Eshaaho",
+  "cash Alert": "Kumanyisibwa esente kuzeija, Eshaaho orikushobora tekihikire",
+  "cash Goal": "Esente ezokutekateka kutunga, Eshaaho orikuhaka",
+  "cash Goal Reach": "Esente ezokwenda otunge, Eshaaho orikuhaka: Kihikire {cashAmount}",
+  "chicken": "Enkoko",
+  "clear Cache": "gufuura ebishushane",
+  "confirm": "kakasa okutandika, Yikirizana neki",
+  "congratulations": "Tukuhimbariza, Webare okusingura",
+  "continue Button": "Komeho, Eipesha ry’okugumizamu",
+  "cow": "Ente",
+  "current Cash": "Esente eziriho, Eshaaho orina: {cashAmount}",
+  "don’t Buy": "Togure, Otagura",
+  "enter Name": "Handikamu eizina, Andika erinja ryobe rya mbere neryokubiri",
+  "error": "Enshobi, Obushabwe",
+  "expenses": "Enshohoza, Obushaho",
+  "game Finished": "Omuzaano gwahwa, Tukuhimbariza okumaliriza omuzannyo gwobe ogw'omuhango",
   "goat": "Embuzi",
-  "hintFirstName": "Erinja rya mbere",
-  "hintLastName": "Erinja ryokubiri",
-  "howToPlay": "Enkora y''okuzannya",
-  "income": "Emingyeezo",
-  "incomePerYear": "Emingyeezo: {cashAmount} / omwaka",
-  "instructionText5": "5. Orina okuhikiza omubarwa gw''eshaaho ogukoresebwa kugira ngo oshobore okukomeho omutandara ogudako",
-  "instructionText6": "6. Oshobora okusanga enkora z''okuzannya omuzannyo guno bwoba orikuteekateeka",
-  "interestCash": "Omugabo bwogura n''okukozesa eshaaho orina guri {interestRate}% / omwaka",
+  "hint First Name": "Erinja rya mbere, Eizina ry’ediini",
+  "hint Last Name": "Erinja ryokubiri, Eizina ry’obuzarwa",
+  "how To Play": "Enkora y'okuzannya, Okworikubasa Kuzana",
+  "income": "Emingyeezo, Entatsya",
+  "income Per Year": "Emingyeezo: {cashAmount} / omwaka, Entastya ya buri Mwaka",
+  "instruction Text1": "Engyenderwaho 1. Okutandika okuzana, ronda ekigambo “EKIKUKURATAHO” aharuguru ahamukono gwaburyo",
+  "instruction Text2": "Engyenderwaho 2. Oshobora kugura ekirwama n'okukozesa eshaaho orina, oba okwemereza oba okuhagarika okugura",
+  "instruction Text3": "Engyenderwaho 3. Buri muzannyo, ebirwama bikura, emingyeezo n'obushaho bikura",
+  "instruction Text4": "Engyenderwaho 4. Ebipimo ebiri hansi y'ekirwama bishobora kuba eby'okugyenda",
+  "instruction Text5": "5. Orina okuhikiza omubarwa gw'eshaaho ogukoresebwa kugira ngo oshobore okukomeho omutandara ogudako",
+  "instruction Text6": "6. Oshobora okusanga enkora z'okuzannya omuzannyo guno bwoba orikuteekateeka",
+  "interest Cash": "Omugabo bwogura n'okukozesa eshaaho orina guri {interestRate}% / omwaka",
+  "investment Options": "Ebyokwenda kutamu sente zawe, Ebintu oshobora kugura",
   "language": "Runyankole - UGX",
-  "languagesTitle": "Enimi",
+  "languages Title": "Enimi, Omutwe gw’endimi",
+  "level": "Eidara, Omutandara {level} / {levelTotal} Amadaara",
+  "life Expectancy": "Emyaka eyokutekateka kuferamu {yearsNum} emyaka omushura",
+  "life Risk": "Ebihikirizi by’amagara, obushobora bwo kufa: 1 ku {number} ejja kufa",
   "loan": "{count, plural, =1{Omwemerezo} other{Emwemerezo}}",
-  "lostGame": "Obushabwe, eshaaho bwaguze. Oshobora kuddamu omutandara guno oba okutandika omuzannyo omupya.",
+  "lost Game": "Obushabwe, eshaaho bwaguze. Oshobora kuddamu omutandara guno oba okutandika omuzannyo omupya.",
   "next": "Ekindako",
-  "nextLevel": "Omutandara ogudako",
-  "notMe": "Oyo si nye",
+  "next Level": "Omutandara ogudako",
+  "not Me": "Oyo si nye, Tinye",
   "overview": "Ahamuramutwe",
-  "payCash": "Gura",
+  "pay Cash": "Gura, Shashuriraho esente",
   "personal": "Ebyange",
-  "price": "Obwire: {cashAmount}",
-  "reachedNextLevel": "Oshitsurize omutandara ogudako",
-  "restart": "Tandika oburo",
-  "restartGame": "Tandika omuzannyo omupya",
-  "restartLevel": "Ddamu omutandara guno",
-  "sameUser": "Niba oye {firstName}, tandika omuzannyo",
-  "settings": "Ebiteekateeko",
-  "signInDifferentPerson": "Hindura eshaaho orina",
-  "startAtLevel": "Tandika ku mutandara {level}",
-  "tip": "Ekipimo",
-  "titleSignIn": "Kakasire okwinjira omuzannyo ogwitwa FinSim Kikuyambe okuza omu muzano ogurikwetwa FinSim",
-  "warning": "Okutebarura",
-  "welcomeBack": "Webare kugaruka, {firstName} {lastName}",
-  "welcomeText": "Muzannyi wangye, omuzannyo guno guri gutekateeka emiringyezo era guri gwa kwigisha. Okuzannya omuzannyo guno tekijja kuhindura mburamu yawe na Bank yawe. Nkakasire kuterekera ebikukwatako munsi",
-  "selectLanguage": "Nyoreka oronde omurimi:",
-  "hintUID": "namba y''omukozesa. eg. UGRT999",
-  "confirmNameTitle": "Kakasa erinja ryawe",
-  "confirmName": "Oye {firstName} {lastName}?",
-  "noButton": "Eipesha rwa Ngaaha",
-  "yesButton": "Eipesha rya Eego",
-  "codeNotFound": "Koodi tiyanzurwe",
-  "noCodeButton": "Tihariho eipesha rya koodi",
-  "signInName": "Handikamu eizina ryawe. Nyoreka oyingire erinja ryawe rya mbere neryokubiri:",
-  "backButton": "Eipesha ry’Okugaruka enyiima",
-  "@@locale": "nyn"
+  "price": "Obwire: {cashAmount}, Omuhendo",
+  "reached Next Level": "Oshitsurize omutandara ogudako, Nahika/wahika eheidara erindi",
+  "restart": "Tandika oburo, Tandika bustya",
+  "restart Game": "Tandika omuzannyo omupya, Tandika butsya omuzaano/okuzaana",
+  "restart Level": "Ddamu omutandara guno, Tandika bustya eidara eri",
+  "same User": "Niba oye {firstName}, tandika omuzannyo, Orikukozesa eki",
+  "settings": "Ebiteekateeko, Engyenderwaho",
+  "sign In Different Person": "hindura eshaaho orina, Handikamu omuntu ondiijo",
+  "start At Level": "Tandika ku mutandara {level}, Tandikira eheidara eri",
+  "tip": "Ekipimo, Manya eki",
+  "title Sign InHandikamu ekitinisa kyawe": "Kakasire okwinjira omuzannyo ogwitwa FinSim Kikuyambe okuza omu muzano ogurikwetwa FinSim",
+  "warning": "Okutebarura, Yerinde ebi",
+  "welcome Back": "Webare kugaruka",
+  "welcome Text": "Muzannyi wangye, omuzannyo guno guri gutekateeka emiringyezo era guri gwa kwigisha. Okuzannya omuzannyo guno tekijja kuhindura mburamu yawe na Bank yawe. Nkakasire kuterekera ebikukwatako munsi",
+  "select Language": "Nyoreka oronde omurimi:, Rondamu Orurumi",
+  "hint UID": "namba y'omukozesa. eg. UGRT999",
+  "confirm Name Title": "Kakasa erinja ryawe, Hamya ekitinisa kyawe",
+  "confirm Name": "Oye {firstName} {lastName}?, Hamya Eizina {Eryediini} {lastName Eiziina ry’obuzarwa}?",
+  "no Button": "Eipesha rwa Ngaaha",
+  "yes Button": "Eipesha rya Eego",
+  "code Not Found": "Koodi tiyanzurwe, Koodi tiyarebeeka",
+  "no Code Button": "Tihariho eipesha rya koodi",
+  "sign In Name": "Handikamu eizina ryawe, Nyoreka oyingire erinja ryawe rya mbere neryokubiri",
+  "back Button": "Eipesha ry’Okugaruka enyiima"
+
 }
