fix: escape single quotes in Runyankole ARB and update l10n.yaml

--- a/lib/l10n/app_nyn.arb
+++ b/lib/l10n/app_nyn.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "nyn",
   "asset Died": "{asset} yafa, Eky’obugaiga bikahwaho",
-  "assets": "ebintu byawe by'okugura, Ebyobugaiga",
+  "assets": "ebintu byawe by''okugura, Ebyobugaiga",
   "assets Died": "Ebintu byawe byafire, Eby’obugaiga bikahwaho",
   "borrow": "okwemereza, Okweguza esente",
   "borrow At": "okwemereza ku okweguza (ahamagoba) {interestRate}% buri mwaka omwaka ninga emyaka ebiri kumyaka ebiri, wemereze ku {interestRate}% omwaka",
@@ -24,16 +24,16 @@
   "goat": "Embuzi",
   "hint First Name": "Erinja rya mbere, Eizina ry’ediini",
   "hint Last Name": "Erinja ryokubiri, Eizina ry’obuzarwa",
-  "how To Play": "Enkora y'okuzannya, Okworikubasa Kuzana",
+  "how To Play": "Enkora y''okuzannya, Okworikubasa Kuzana",
   "income": "Emingyeezo, Entatsya",
   "income Per Year": "Emingyeezo: {cashAmount} / omwaka, Entastya ya buri Mwaka",
   "instruction Text1": "Engyenderwaho 1. Okutandika okuzana, ronda ekigambo “EKIKUKURATAHO” aharuguru ahamukono gwaburyo",
-  "instruction Text2": "Engyenderwaho 2. Oshobora kugura ekirwama n'okukozesa eshaaho orina, oba okwemereza oba okuhagarika okugura",
+  "instruction Text2": "Engyenderwaho 2. Oshobora kugura ekirwama n''okukozesa eshaaho orina, oba okwemereza oba okuhagarika okugura",
   "instruction Text3": "Engyenderwaho 3. Buri muzannyo, ebirwama bikura, emingyeezo n'obushaho bikura",
-  "instruction Text4": "Engyenderwaho 4. Ebipimo ebiri hansi y'ekirwama bishobora kuba eby'okugyenda",
-  "instruction Text5": "5. Orina okuhikiza omubarwa gw'eshaaho ogukoresebwa kugira ngo oshobore okukomeho omutandara ogudako",
-  "instruction Text6": "6. Oshobora okusanga enkora z'okuzannya omuzannyo guno bwoba orikuteekateeka",
-  "interest Cash": "Omugabo bwogura n'okukozesa eshaaho orina guri {interestRate}% / omwaka",
+  "instruction Text4": "Engyenderwaho 4. Ebipimo ebiri hansi y''ekirwama bishobora kuba eby''okugyenda",
+  "instruction Text5": "5. Orina okuhikiza omubarwa gw''eshaaho ogukoresebwa kugira ngo oshobore okukomeho omutandara ogudako",
+  "instruction Text6": "6. Oshobora okusanga enkora z''okuzannya omuzannyo guno bwoba orikuteekateeka",
+  "interest Cash": "Omugabo bwogura n''okukozesa eshaaho orina guri {interestRate}% / omwaka",
   "investment Options": "Ebyokwenda kutamu sente zawe, Ebintu oshobora kugura",
   "language": "Runyankole - UGX",
   "languages Title": "Enimi, Omutwe gw’endimi",
@@ -63,7 +63,7 @@
   "welcome Back": "Webare kugaruka",
   "welcome Text": "Muzannyi wangye, omuzannyo guno guri gutekateeka emiringyezo era guri gwa kwigisha. Okuzannya omuzannyo guno tekijja kuhindura mburamu yawe na Bank yawe. Nkakasire kuterekera ebikukwatako munsi",
   "select Language": "Nyoreka oronde omurimi:, Rondamu Orurumi",
-  "hint UID": "namba y'omukozesa. eg. UGRT999",
+  "hint UID": "namba y''omukozesa. eg. UGRT999",
   "confirm Name Title": "Kakasa erinja ryawe, Hamya ekitinisa kyawe",
   "confirm Name": "Oye {firstName} {lastName}?, Hamya Eizina {Eryediini} {lastName Eiziina ry’obuzarwa}?",
   "no Button": "Eipesha rwa Ngaaha",
@@ -72,5 +72,4 @@
   "no Code Button": "Tihariho eipesha rya koodi",
   "sign In Name": "Handikamu eizina ryawe, Nyoreka oyingire erinja ryawe rya mbere neryokubiri",
   "back Button": "Eipesha ry’Okugaruka enyiima"
-
 }
